2011-10-15 Roman
- !!!!:SYS: Loaded objects check to removed from DB for remove object is added.
    Checking for remove performed only at direct selected DB loading.
- !!!!:DB: The function TDBS::dataSeek() and TDBS::dataDel() is updated for strong config file process allow.
- UI:QTCfg: List and Table processing is some updated for full space occupy by Vandrizm initiative.


2011-10-14 Roman
- Security: Users and groups check to removed from DB for remove object is added.
    Checking for remove performed only at direct selected DB loading.
- SYS: The function chkSelDB() is adapted for support writing to config-file "<cfg>".
- FIX:DAQ.DCON, DAQ.System, DAQ.Siemens, DAQ.LogicLev, DAQ.DAQGate, DAQ.BlockCalc:
    Fix to old period mechanism store into DB field "PERIOD". Direct load and use is prevented.
- DAQ.Template, DAQ.JavaLikeCalc, UI.VCAEngine, : DB address is addapted to "<cfg>.[tbl]" parse.
- !!:DB: Time limit at 5s and offset set is added to big table content display.
- FIX:UI.Vision: Edit area resize and top hold is fixed on geometry change for edited widget.


2011-10-11 Roman
- DAQ.JavaLikeCalc: Set types for all registers on calc and Registers content prepare is pass.


2011-10-10 Roman
- Archive: Trends build hang for maximum border leser minimum. Tip helps added for trends build dialog.
- FIX:DAQ.JavaLikeCalc: EVAL_BOOL return fix to TVariant by convert to char.
    Set value from NULL TVariant to RegW is fixed. Registers context init on call is change to use switch.
    Set Object in function RegW::setType() is fixed by create empty object.
    Constant's strings concatenate is fixed for multiply constants.


2011-10-09 Roman
- UI.Vision, UI.WebVision: Value, not use percent, scale store for multiply parameters into primitive "Diagram"
    for the parameters like scale, over 20%, is added.
- FIX:DB.PostgreSQL: TIMESTAMP place for DateTimeDec integer type is fixed.


2011-10-07 Roman